sonar-server/src/main/less/dashboard.less
/* LAYOUT */
#dashboard {
  position: relative;
  width: 100%;
}

#dashboard .transparent {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background: url('../images/transparent.gif') repeat;
  z-index: 1000;
}

/* WIDGETS */
#dashboard .widget {
  position: relative;
  overflow-x: auto;
  overflow-y: hidden;
  padding: 10px;
  margin: 0;
  border: 1px solid #ddd;
}

#dashboard .block {
  margin: 0 0 10px 0;
}

#dashboard .configure_widget {
  display: block;
  position: relative;
}

#dashboard .widget_props {
  background-color: #FFF6BF;
  border: 1px solid #FFD324;
  margin-bottom: 10px;
  padding: 5px;
  border-radius: 0 0 3px 3px;
  -moz-border-radius: 0 0 3px 3px;
  -webkit-border-radius: 0 0 3px 3px;
}

#dashboard .widget-title {
  background-color: #4B9FD5;
  color: #FEFEFE;
  padding: 0 5px;
  height: 24px;
  line-height: 24px;
}

#dashboard .widget-title a {
  color: #FEFEFE;
}

/*CONFIGURATION*/
#dashboard #configure {
  position: relative;
  height: 260px;
  margin: 5px 0 10px 0;
}

#dashboard #widget_defs, #dashboard #edit-layout {
  background-color: #FFF6BF;
  border: 2px solid #FFD324;
  padding: 3px;
  border-radius: 3px;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  overflow-x: hidden;
}

#dashboard #widget_defs {
  margin-right: 104px;
  overflow-y: auto;
  height: 250px;
}

#dashboard #edit-layout {
  width: 86px;
  height: 248px;
  position: absolute;
  right: 0;
  top: 0;
  padding-top: 5px;
}

#dashboard #edit-layout p {
  margin-bottom: 5px;
}

#dashboard .widget_def {
  border: 1px solid #FFD324;
  padding: 5px;
  margin: 3px;
  white-space: normal;
  vertical-align: top;
  width: 250px;
  float: left;
  min-height: 100px;
}

#dashboard ul.widget_categs li {
  padding-right: 5px;
}

#dashboard ul.widget_categs li.selected a {
  font-weight: bold;
  text-decoration: none;
}

#dashboard .select-layout {
  float: left;
}

#dashboard .select-layout img {
  border: 3px solid #FFF6BF;
}

#dashboard .select-layout.selected img {
  border: 3px solid #4B9FD5;
}

.admin_page {
    position: relative;
}

.admin_page table {
  margin-top: 10px;
  margin-bottom: 50px;
}

.admin_page .empty {
  font-style: italic;
}

.admin_page .operations {
  width: 260px;
  text-align: right;
}

.admin_page .owner {
  width: 140px;
  text-align: center;
}

.admin_page .shared {
  width: 40px;
  text-align: center;
}

.admin_page .order, .admin_page .global {
  width: 45px;
  text-align: center;
}

/*OPERATIONS*/
#dashboard #dashboard-operations {
  position: relative;
  display: inline-block;
  width: 100%;
}

#dashboard #dashboard-operations ul.operations {
  float: left;
  list-style-type: none;
  border: 1px solid #cdcdcd;
  padding: 0;
  margin: 0;
  border-radius: 3px;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
}

#dashboard #dashboard-operations ul.operations li {
  float: left;
  margin: 0;
  padding: 2px 10px;
  position: relative;
  background-color: #f4f4f4;
  font-size: 85%;
  border-right: 1px solid #cdcdcd;
}

#dashboard #dashboard-operations ul.operations li.last {
  border-right-width: 0;
}

#dashboard #dashboard-operations ul.operations li.selected {
  background-color: #d4d4d4;
}

#dashboard #dashboard-operations ul.operations li a {
  color: #555;
}

#dashboard .dashboard-column {
  margin: 0;
  padding: 0;
  overflow: visible;
}

#dashboard .dashboard-column-wrapper {
  float: left;
  margin: 0;
  padding: 0;
}

#dashboard .column-handle {
  height: 30px;
  width: 100%;
  margin: 0;
  padding: 0;
  display: inline-block;
  line-height: 100px;
  text-align: center;
  font-size: x-large;
  vertical-align: middle;
  background-color: #eee;
}

#dashboard .block {
  position: relative;
  width: 100%;
}

#dashboard .widget-header {
  line-height: 16px;
  padding: 3px 5px;
  background-color: #efefef;
  border: 1px solid #ddd;
  border-bottom: 0;
}

#dashboard .widget-handle {
  cursor: move;
  margin: 0;
  background-image: url('../images/move.png');
  background-position: left center;
  background-repeat: no-repeat;
  padding-left: 20px;
}

#dashboard .widget-actions {
  float: right;
  overflow: hidden; /* clears float for most browsers */
  zoom: 1;
}

#dashboard .widget-actions a {
  cursor: pointer;
}

#dashboard .block-hover {
  outline: 2px dashed #ddd;
}

#dashboard .shadow-block {
  box-shadow: 8px 8px 8px #ddd;
  box-shadow: 8px 8px 8px #ddd;
  -moz-box-shadow: 8px 8px 8px #ddd;
  -webkit-box-shadow: 8px 8px 8px #ddd;
}

